src/objects/QPMS__Inspection__c.object
<CustomObject>
    <description>This object will store the inspection details.</description>
    <fields>
        <fullName>QPMS__AQL_Filter_Condition__c</fullName>
        <description>sampling filter condition</description>
        <label>AQL Filter Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Actual_Sampling_Plan__c</fullName>
        <description>Actual Sampling Plan to be used in inspection</description>
        <label>Actual Sampling Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Age__c</fullName>
        <formula>TEXT(IF( ISBLANK( QPMS__Closed_Date__c ) , TODAY() - DATEVALUE(CreatedDate), QPMS__Closed_Date__c - DATEVALUE(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Allow_workflow_change__c</fullName>
        <description>allow workflow change field data from inspection type</description>
        <formula>QPMS__Inspection_Type__r.QPMS__Allow_Workflow_Change__c</formula>
        <label>Allow workflow change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <description>Approval Process</description>
        <label>Approval Process</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change Owner</fullName>
                </value>
                <value>
                    <fullName>Change Due Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <description>to store the approval group name</description>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag for Inspection approval</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <description>Holds the status of inspection approval Status</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Inspection</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Inspection</description>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Inspection</description>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for Inspection</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Batch_Number__c</fullName>
        <description>It will show the Batch Number for inspection object.</description>
        <label>Batch Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Batch_Qty__c</fullName>
        <description>It will store the Batch_Qty number for inspection object.</description>
        <label>Batch Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Business_Unit__c</fullName>
        <description>Business unit</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unit 1</fullName>
                </value>
                <value>
                    <fullName>Unit 2</fullName>
                </value>
                <value>
                    <fullName>Unit 3</fullName>
                </value>
                <value>
                    <fullName>Unit 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <description>ChangeFieldApprovalStatus</description>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Closed_Date__c</fullName>
        <description>Used for calculating age of the inspection</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Created_By__c</fullName>
        <description>This is a formula field used for storing Created by</description>
        <formula>Owner:User.FirstName+&apos; &apos;+Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>sequence number to select the approvers</description>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Delivered_date__c</fullName>
        <description>ordered material delivered date</description>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Due_Date__c</fullName>
        <description>It will show the due date for the Inspection.</description>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Est_Delivery_Date__c</fullName>
        <description>It will show the Est Delivery Date for inspection object.</description>
        <label>Est Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initial Submitter</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspectionsy4VV</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__InspectionStandard_Name__c</fullName>
        <formula>QPMS__Inspection_Standard__r.QPMS__Name__c</formula>
        <label>Inspection Standard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__InspectionType_Name__c</fullName>
        <description>This is used to display Inspection Type name.</description>
        <formula>QPMS__Inspection_Type__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InspectionType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__InspectionType__c</fullName>
        <description>Inspection Type values</description>
        <label>Inspection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Incoming</fullName>
                </value>
                <value>
                    <fullName>First Article(FAI)</fullName>
                </value>
                <value>
                    <fullName>Pre-production(PPI)</fullName>
                </value>
                <value>
                    <fullName>During Production(DPI)</fullName>
                </value>
                <value>
                    <fullName>Pre-Shipment(PSI)</fullName>
                </value>
                <value>
                    <fullName>Random</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Container Loading</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Inspection Created</description>
        <label>Inspection Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard_Name__c</fullName>
        <description>This is used to display Inspection Standard name</description>
        <formula>QPMS__Inspection_Standard__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Standard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard_Sampling_Plan__c</fullName>
        <description>Sampling plan for inspection standard</description>
        <formula>QPMS__Inspection_Standard__r.QPMS__Sampling_Plan__c</formula>
        <label>Inspection Standard Sampling Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Standard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>look up to inspection standard</description>
        <label>Inspection Standard</label>
        <referenceTo>QPMS__Inspection_Standard__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_TypeName__c</fullName>
        <description>This is used to display inspection type name</description>
        <formula>QPMS__Inspection_Type__r.QPMS__IT_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inspection Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Type_Name__c</fullName>
        <description>Inspection Type Name</description>
        <label>Inspection Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Inspection_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Inspection Type lookup.</description>
        <label>Inspection Type</label>
        <referenceTo>QPMS__Inspection_Type__c</referenceTo>
        <relationshipLabel>Inspections (Inspection Type Lookup)</relationshipLabel>
        <relationshipName>Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Line__c</fullName>
        <description>It will store the line number for inspection object.</description>
        <label>Line #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Location_Name__c</fullName>
        <description>This is used to display the location</description>
        <formula>QPMS__Location__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manufacturing location</description>
        <label>Location</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Inspections (Location)</relationshipLabel>
        <relationshipName>Inspections1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Lot__c</fullName>
        <description>It will show the lot number for inspection object.</description>
        <label>Lot</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Material_Name__c</fullName>
        <description>This is used to display Materials</description>
        <formula>QPMS__Material__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Material details</description>
        <label>Product</label>
        <referenceTo>QPMS__Product__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Due_Date__c</fullName>
        <description>This will store new due date after change.</description>
        <label>New Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This will store the new owner after change.</description>
        <label>New Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_DueDate__c</fullName>
        <description>This Field is to capture due date note approver</description>
        <label>Note To Approver DueDate</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Owner_DueDate__c</fullName>
        <description>Note To Approver Owner/DueDate</description>
        <label>Note To Approver Owner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>To save audit approvers note</description>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Ordered_UOM__c</fullName>
        <description>It will describe the Ordered UOM for inspection</description>
        <label>Ordered UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mm</fullName>
                </value>
                <value>
                    <fullName>inch</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                </value>
                <value>
                    <fullName>lbs</fullName>
                </value>
                <value>
                    <fullName>cm</fullName>
                </value>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>g</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Owner_Name__c</fullName>
        <description>Formula Field</description>
        <formula>Owner:User.FirstName+&apos; &apos;+Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__PO_Date__c</fullName>
        <description>It will show the PO date of inspection Object.</description>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__PO_Material_Id__c</fullName>
        <label>PO Material Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__PO_Number__c</fullName>
        <description>It will store PO number for the inspection object.</description>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Inspection_Id__c</fullName>
        <description>Parent Inspection Id for reinsepction</description>
        <label>Parent Inspection Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Priority__c</fullName>
        <description>It will describe the priority type for the inspection.</description>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Product_Sampling_Plan__c</fullName>
        <formula>QPMS__Material__r.QPMS__Sampling_Plan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Sampling Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Purchase_Order_Required__c</fullName>
        <label>Purchase Order Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Purchase_Order__c</fullName>
        <description>Purchase Order</description>
        <label>Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Quantity_Ordered__c</fullName>
        <description>This field describes total amount of orders.</description>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Quantity_Received__c</fullName>
        <description>It will store the Quantity Received number for inspection object.</description>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Quantity_Status__c</fullName>
        <description>It will dispaly the status of Quantity Status for inspection object.</description>
        <label>Quantity Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Shortage</fullName>
                </value>
                <value>
                    <fullName>Overage</fullName>
                </value>
                <value>
                    <fullName>Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Quantity__c</fullName>
        <description>Ordered quantity</description>
        <formula>IF(QPMS__Sample_Size_Calculation__c ==&apos;Use Qty Received&apos;,QPMS__Quantity_Received__c,IF(QPMS__Sample_Size_Calculation__c == &apos;Use Qty Ordered&apos;,QPMS__Quantity_Ordered__c,IF(QPMS__Sample_Size_Calculation__c ==&apos;Use Batch Qty&apos;,QPMS__Batch_Qty__c,IF(QPMS__Sample_Size_Calculation__c  ==&apos;Use WO Qty&apos;,QPMS__WO_Qty__c,0))))</formula>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason_For_Void__c</fullName>
        <label>Reason For Void</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Res_Signed_Off_Details__c</fullName>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Code__c</fullName>
        <description>Inspection Resolution code</description>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inspect</fullName>
                </value>
                <value>
                    <fullName>No Inspection Required</fullName>
                </value>
                <value>
                    <fullName>Discard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Rationale__c</fullName>
        <label>Resolution Rationale</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Resolution_Status__c</fullName>
        <description>used to get the status of resolution</description>
        <label>Resolution Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Result__c</fullName>
        <description>It will show the result of the inspection.</description>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Sample_Plan__c</fullName>
        <description>It will show the sample plan for the inspection object.</description>
        <label>Sample Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sample_Size_Calculation__c</fullName>
        <label>Sample Size Calculation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sample_Size__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It will describe the Sample Size of the inspection.</description>
        <label>Sample Size</label>
        <referenceTo>QPMS__Sampling_Plan__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sampling_Hierarchy__c</fullName>
        <description>to populate sampling plan hierarchy</description>
        <formula>QPMS__Inspection_Type__r.QPMS__Sampling_Plan_Hierarchy_PickList__c</formula>
        <label>Sampling Hierarchy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Shipment_Received_Date__c</fullName>
        <description>It will show the Shipment Received Date for the inspection object.</description>
        <label>Shipment Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <description>Signed Off Details</description>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Site_Name__c</fullName>
        <description>This is used to display Site Name</description>
        <formula>QPMS__Site__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manufacturing site</description>
        <label>Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Status__c</fullName>
        <description>It will describe the status of the inspection.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>InReview</fullName>
                </value>
                <value>
                    <fullName>In-Inspection</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Name__c</fullName>
        <description>It will store the supplier name for inspection object.</description>
        <label>Supplier Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Number_Name__c</fullName>
        <description>This is used to display Supplier Number Name</description>
        <formula>QPMS__Supplier_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Supplier Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Supplier Number</description>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Profile</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>QPMS__Supplier_Profile__c.QPMS__Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QPMS__Supplier_Profile__c</referenceTo>
        <relationshipLabel>Inspections</relationshipLabel>
        <relationshipName>Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Supplier_part__c</fullName>
        <description>It will store the supplier part number for inspection object.</description>
        <label>Supplier part</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__WO_Date__c</fullName>
        <description>It will show the WO_Date for inspection object.</description>
        <label>WO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__WO_Number__c</fullName>
        <description>It will store the WO_Number for inspection object.</description>
        <label>WO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__WO_Qty__c</fullName>
        <description>This is used for store the work order quantity</description>
        <label>WO Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Work_Order_Required__c</fullName>
        <label>Work Order Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__isLocked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to hold value of isLocked</description>
        <label>isLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__isSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>submit flag</description>
        <label>isSubmit</label>
        <type>Checkbox</type>
    </fields>
    <label>Inspection</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inspection Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>